--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,1 +1,2 @@
-<app-game-settings></app-game-settings> <app-game-arena></app-game-arena>
+<app-game-settings></app-game-settings>
+<app-game-arena></app-game-arena>
