--- a/src/app/game/game-settings/game-settings.component.scss
+++ b/src/app/game/game-settings/game-settings.component.scss
@@ -1,3 +1,5 @@
+@import "../../shared/styles/mixins.scss";
+
 :host {
   border-bottom: 1px solid black;
   background-color: white;
@@ -11,7 +13,7 @@
 .control {
   display: flex;
   flex: 1;
-  background-color: lightslategrey;
+  background-color: $base-bg-color;
   margin: 0.5rem;
   padding-left: 0.5rem;
   border-radius: 0.25rem;
