--- a/src/app/shared/components/welcome/welcome.component.scss
+++ b/src/app/shared/components/welcome/welcome.component.scss
@@ -1,19 +1,21 @@
 @import "../../styles/mixins.scss";
 
 :host {
-  color: white;
   @include flexCenterContainer;
+  color: white;
   flex-direction: column;
 }
+
 p {
   padding: 1rem;
 }
+
 .welcome-container {
   border: 1px solid black;
   border-radius: 0.5em;
   padding: 1rem;
   margin: 2rem;
-  background-color: lightslategrey;
+  background-color: $base-bg-color;
   opacity: 0.95;
 }
 
